--- a/interaction/templates/interaction/chat.html
+++ b/interaction/templates/interaction/chat.html
@@ -136,7 +136,7 @@
         <!-- Chat Header -->
         <div class="chat-header">
             <div class="chat-header-info">
-                <a href="{% url 'chat_selection' %}" class="chat-header-button tooltip">
+                <a href="{% url 'interaction:chat_selection' %}" class="chat-header-button tooltip">
                     <i class="bi bi-arrow-left"></i>
                     <span class="tooltip-text">Back to AI selection</span>
                 </a>
@@ -165,18 +165,18 @@
                         <span class="tooltip-text">More options</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="chatOptionsDropdown">
-                        <li><a class="dropdown-item" href="{% url 'download_conversation' conversation_id=conversation.id format='txt' %}">
+                        <li><a class="dropdown-item" href="{% url 'interaction:download_conversation' conversation_id=conversation.id format='txt' %}">
                             <i class="bi bi-file-text me-2"></i> Download as Text
                         </a></li>
-                        <li><a class="dropdown-item" href="{% url 'download_conversation' conversation_id=conversation.id format='json' %}">
+                        <li><a class="dropdown-item" href="{% url 'interaction:download_conversation' conversation_id=conversation.id format='json' %}">
                             <i class="bi bi-file-code me-2"></i> Download as JSON
                         </a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="{% url 'share_conversation' conversation_id=conversation.id %}">
+                        <li><a class="dropdown-item" href="{% url 'interaction:share_conversation' conversation_id=conversation.id %}">
                             <i class="bi bi-share me-2"></i> Share Conversation
                         </a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item text-danger" href="{% url 'delete_conversation' conversation_id=conversation.id %}">
+                        <li><a class="dropdown-item text-danger" href="{% url 'interaction:delete_conversation' conversation_id=conversation.id %}">
                             <i class="bi bi-trash me-2"></i> Delete Conversation
                         </a></li>
                     </ul>
