--- a/interaction/templates/interaction/chat_selection.html
+++ b/interaction/templates/interaction/chat_selection.html
@@ -27,14 +27,14 @@
                             </p>
                         </div>
                         <div class="card-footer bg-transparent border-0">
-                            <a href="{% url 'continue_conversation' conversation_id=conversation.id %}" class="btn btn-outline-primary">Continue</a>
+                            <a href="{% url 'interaction:continue_conversation' conversation_id=conversation.id %}" class="btn btn-outline-primary">Continue</a>
                         </div>
                     </div>
                 </div>
                 {% endfor %}
             </div>
             <div class="mt-3">
-                <a href="{% url 'conversation_history' %}" class="btn btn-link">View all conversations</a>
+                <a href="{% url 'interaction:conversation_history' %}" class="btn btn-link">View all conversations</a>
             </div>
         </div>
     </div>
@@ -64,8 +64,8 @@
                             </div>
                         </div>
                         <div class="card-footer bg-transparent border-0">
-                            <a href="{% url 'chat' ai_id=ai_tool.id %}" class="btn btn-primary">Start Chat</a>
-                            <a href="{% url 'presentationAI' id=ai_tool.id %}" class="btn btn-link">Details</a>
+                            <a href="{% url 'interaction:chat' ai_id=ai_tool.id %}" class="btn btn-primary">Start Chat</a>
+                            <a href="{% url 'catalog:presentationAI' id=ai_tool.id %}" class="btn btn-link">Details</a>
                         </div>
                     </div>
                 </div>
