Implement consistent pagination across all list views

--- a/interaction/templates/interaction/manage_shared_chats.html
+++ b/interaction/templates/interaction/manage_shared_chats.html
@@ -107,6 +107,8 @@
                                     {% endfor %}
                                 </tbody>
                             </table>
+                            
+                            {% include 'core/partials/pagination.html' %}
                         </div>
                     {% else %}
                         <div class="text-center py-4">
