--- a/interaction/templates/interaction/favorite_prompts.html
+++ b/interaction/templates/interaction/favorite_prompts.html
@@ -40,7 +40,7 @@
 
     <!-- Prompts List -->
     {% if prompts %}
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mb-4">
             {% for prompt in prompts %}
                 <div class="col">
                     <div class="card h-100 shadow-sm">
@@ -80,6 +80,8 @@
                 </div>
             {% endfor %}
         </div>
+        
+        {% include 'core/partials/pagination.html' %}
     {% else %}
         <div class="row">
             <div class="col-12 text-center py-5">
